third day complete

--- a/first.html
+++ b/first.html
@@ -39,9 +39,9 @@
     </div>
 </div>
    <input type="text" id="username" placeholder="Enter Username">
-   <input type="password" id="password" placeholder="Enter Password">
-   <input type="file" id="profilePic">
-   <script src="script.js"></script>
-   <button onclick="login()"
-    >Login</button>
+<input type="password" id="password" placeholder="Enter Password">
+<input type="file" id="profilePic">
+<button onclick="login()">Login</button>
+<p id="login-error" style="color: red; display: none;"></p>
+<script src="script.js"></script>
 </div>
