--- a/second.html
+++ b/second.html
@@ -1,5 +1,7 @@
 
-<img src="/Pictures/Google_2015_logo.svg.png" alt="Google Logo" width="200" height="80">
+<div>
+<img src="./Pictures/Google_2015_logo.svg.png" alt="Google Logo" width="272" height="92">
 <input type="text" placeholder="Search Google or type a URL">
 <button>Google Search</button>
 <button>I'm Feeling Lucky</button>
+</div>
