--- a/first.html
+++ b/first.html
@@ -3,7 +3,7 @@
     <img id="mars-image" src="https://upload.wikimedia.org/wikipedia/commons/0/02/OSIRIS_Mars_true_color.jpg" alt="Mars" width="500" height="600">
 </div>
 <!--this Div tag groups all the elements inside it-->
-<div>
+<div id="content" style="max-width: 600px; margin: auto;">
     <p> Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System, 
         being larger than only Mercury. In English, Mars carries the name of the Roman god of war 
         and is often referred to as the "Red Planet" because the iron oxide prevalent on its surface 
