--- a/second.html
+++ b/second.html
@@ -1,7 +1,13 @@
-
-<div>
-<img src="./Pictures/Google_2015_logo.svg.png" alt="Google Logo" width="272" height="92">
-<input type="text" placeholder="Search Google or type a URL">
-<button>Google Search</button>
-<button>I'm Feeling Lucky</button>
-</div>
+<!DOCTYPE html>
+<html>
+ <head>
+    <link rel="stylesheet" href="styles.css"   >
+ </head>    
+ <body>
+    <img src="./Pictures/Google_2015_logo.svg.png" alt="Google Logo" width="272" height="92">
+    <input type="text" placeholder="Search Google or type a URL">
+    <button onclick="dispatchEvent">Google Search</button>
+    <button>I'm Feeling Lucky</button>  
+    <p>We protect your privacy. <a href="./Helpfile.html">Learn how</a></p>
+ </body>
+</html>
