simple portfolio upload

--- a/second.html
+++ b/second.html
@@ -9,5 +9,5 @@
     <button onclick="dispatchEvent">Google Search</button>
     <button>I'm Feeling Lucky</button>  
     <p>We protect your privacy. <a href="./Helpfile.html">Learn how</a></p>
- </body>
+    <a href="./work.html">Go Back</a>
 </html>
