--- a/work.html
+++ b/work.html
@@ -1,4 +1,6 @@
 <h1>Digant Bhanwariya</h1>
 <h3>Software Engineer | Teledyne | Ex- Optym</h3>
 <h2>Projects</h2>
-<a href="./second.html">my google page</a>
+<ol>
+    <li><<a href="./second.html">my google page</a>/li>
+</ol
