--- a/work2.html
+++ b/work2.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Portfolio</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <img src="./Pictures/Portfolio.jpeg" alt="Portfolio Image" width="200" height="200">
