--- a/second.html
+++ b/second.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <link rel="stylesheet" href="styles.css"   >
+    <link rel="stylesheet" href="googlestyles.css"   >
  </head>    
  <body>
-    <img src="./Pictures/Google_2015_logo.svg.png" alt="Google Logo" width="272" height="92">
-    <input type="text" placeholder="Search Google or type a URL">
-    <button onclick="dispatchEvent">Google Search</button>
-    <button>I'm Feeling Lucky</button>  
-    <p>We protect your privacy. <a href="./Helpfile.html">Learn how</a></p>
-    <a href="./work.html">Go Back</a>
+   <div class="searchbox">
+     <img src="./Pictures/Google_2015_logo.svg.png" alt="Google Logo" width="272" height="92"> 
+     <div class="text"><input type="text" placeholder="Search Google or type a URL"> </div>
+   </div>  
+   <div class="buttons">
+     <button onclick="dispatchEvent">Google Search</button>
+     <button>I'm Feeling Lucky</button>  
+   </div>
+   <div class="language">
+     <p>We protect your privacy. <a href="./Helpfile.html">Learn how</a></p>
+     <a href="./work.html">Go Back</a>
+   </div>  
 </html>
