till flex box, 2.22 hrs

--- a/second.html
+++ b/second.html
@@ -5,12 +5,12 @@
  </head>    
  <body>
    <div class="searchbox">
-     <img src="./Pictures/Google_2015_logo.svg.png" alt="Google Logo" width="272" height="92"> 
-     <div class="text"><input type="text" placeholder="Search Google or type a URL"> </div>
+     <img src="./Pictures/Google_2015_logo.svg.png" class="Google_2015_logo"alt="Google Logo" width="272" height="92"> 
+     <input class="Google_Search_bar" type="text" placeholder="Search Google or type a URL">
    </div>  
    <div class="buttons">
-     <button onclick="dispatchEvent">Google Search</button>
-     <button>I'm Feeling Lucky</button>  
+     <button class="SearchButton" onclick="dispatchEvent">Google Search</button>
+     <button class="LuckyButton">I'm Feeling Lucky</button>  
    </div>
    <div class="language">
      <p>We protect your privacy. <a href="./Helpfile.html">Learn how</a></p>
