--- a/work.html
+++ b/work.html
@@ -1,6 +1,24 @@
-<h1>Digant Bhanwariya</h1>
-<h3>Software Engineer | Teledyne | Ex- Optym</h3>
-<h2>Projects</h2>
-<ol>
-    <li><<a href="./second.html">my google page</a>/li>
-</ol
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Work</title>
+    <link rel="stylesheet" href="work.css">
+</head>
+<body>
+    <div class="card">
+        <img class="ProfilePhoto"src="./Pictures/Portfolio.jpeg" alt="Portfolio Image" width="200" height="200">
+        <div class="content">
+             <h3>Digant Bhanwariya</h3>
+             <p> Software Engineer | Teledyne | Ex- Optym </p>
+            <h4>Projects</h4>
+            <ol>
+                <li><a href="./second.html">my google page</a></li>
+            </ol>
+        </div>
+    </div>
+</body>
+</html>
+
