BirthdayPage Updated for a certain period of time.

--- a/BirthdayPage/birthdayPage.html
+++ b/BirthdayPage/birthdayPage.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="topmost">
-        <h1>Today is Nick's Birthday 🥳 🍌</h1>
-        <img id="MainImage" src="./Nick.jpeg" alt="">
-        <h2 class="bday-age">He is 27 years old</h2>
-        <h4 class="bday-age">30/11/1998</h4>
+        <h1>Today is Idu's Birthday 🥳</h1>
+        <img id="MainImage" src="./1000099660 copy.JPG" alt="" crop="true">
+        <h2 class="bday-age">she is 18 years old</h2>
+        <h4 class="bday-age">17/12/2007</h4>
     </div>
 
     <div class="wishes-section">
@@ -41,10 +41,21 @@
         <div class="gifts" id="fourth_gift" src="./gold-ribbon-on-pink-background-gift-box-cover-vector-4659249.avif" alt="gift-box-1"></div>
     </div>  
     
+    <div class="wishes-section">
+        <h2 class="wishes-heading">You will always be close to my 💖 </h2>
+        <h3>(Hover over the gift)</h3>
+        <div class="gifts" id="sixth_gift" src="./gold-ribbon-on-pink-background-gift-box-cover-vector-4659249.avif" alt="gift-box-1"></div>
+    </div>  
+
       <div class="wishes-section">
-        <h2 class="wishes-heading">This one is for you , my friend 🥰</h2>
+        <h2 class="wishes-heading">This one is for you , my love 🥰</h2>
         <h3>(Hover over the gift)</h3>
         <div class="gifts" id="fifth_gift" src="./gold-ribbon-on-pink-background-gift-box-cover-vector-4659249.avif" alt="gift-box-1"></div>
-    </div>  
+    </div>
+
+    <!-- Balloons container: balloons.js will spawn balloons here on load -->
+    <div class="balloon-container" aria-hidden="true"></div>
+
 </body>
+    <script src="./balloons.js" defer></script>
 </html>
